la till frågor i min quizContainer

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <button id="start-btn">Start Quiz</button>
   </div>
   <div id="quiz-container">
+    <div id="question-text"></div>
   </div>
   <script src="index.js" type="module"></script>
 </body>
