--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   </div>
   <div id="quiz-container">
     <div id="question-text"></div>
+    <div id="answer-btns"></div>
   </div>
   <script src="index.js" type="module"></script>
 </body>
