La till en knapp och funktionalitet för att visa nästa fråga efter att ett svar har valts

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <div id="quiz-container">
     <div id="question-text"></div>
     <div id="answer-btns"></div>
+    <button id="next-btn" style="display: none;">Next Question</button>
   </div>
   <script src="index.js" type="module"></script>
 </body>
