La till end-container för att visa poäng efter quizet och la till lite css

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
       <div id="answer-btns"></div>
     <button id="next-btn" style="display: none;">Next Question</button>
   </div>
+  <div id="end-container">
+  </div>
   <script src="index.js" type="module"></script>
 </body>
 </html>
