--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
     <button id="start-btn">Start Quiz</button>
   </div>
   <div id="quiz-container">
+    <div id="timer">Time left: 10s</div>
     <div id="question-text"></div>
       <div id="answer-btns"></div>
     <button id="next-btn" style="display: none;">Next Question</button>
   </div>
-  <div id="end-container">
-  </div>
+  <div id="end-container"></div>
   <script src="index.js" type="module"></script>
 </body>
 </html>
