La till en clearInterval för timer så att timern stoppas när användaren tryckt på ett svar

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <button id="start-btn">Start Quiz</button>
   </div>
   <div id="quiz-container">
-    <div id="timer">Time left: 10s</div>
+    <div id="timer"></div>
     <div id="question-text"></div>
       <div id="answer-btns"></div>
     <button id="next-btn" style="display: none;">Next Question</button>
