--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
   <div id="quiz-container">
     <div id="timer"></div>
     <div id="question-text"></div>
-      <div id="answer-btns"></div>
-    <button id="next-btn" style="display: none;">Next Question</button>
+    <div id="answer-btns"></div>
+    <button id="next-btn">Next Question</button>
   </div>
   <div id="end-container"></div>
   <script src="index.js" type="module"></script>
